# python-blosc2

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  ADD_LAZYFUNCS.md  AGENTS.md  ANNOUNCE.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  LICENSE.txt  ONBOARDING.md  README.md  README.rst  README_DEVELOPERS.md  RELEASE_NOTES.md  RELEASING.rst  ROADMAP-TO-4.0.md  VERSION  generate_version.py  guix.scm  pyproject.toml  pytest.ini  requirements-build.txt  requirements-dev.txt  requirements-doc.txt  requirements-runtime.txt  requirements-test-wheels.txt  requirements-tests.txt  requirements.txt  setup.py  tree_store_extensions.md  update_version.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_macos.yml  cibuildwheels.yml  tests.yml  upload_wheels.yml  wasm-tests.yml  wasm.yml  win.yml
.guix/modules/: python-blosc2-package.scm
.skills/wasm32-pyodide-dev/: SKILL.md
LICENSES/: BLOSC.txt
_cmake_test_compile/: CMakeLists.txt
bench/: README_mmap_store_read.md  b2zip-linspace.py  batch_array.py  batch_array_cframes.py  batch_store.py  batch_store_cframes.py  bench_pandas_engine.py  compress_numpy.py  constructor.py  encode-int16-lossy.py  encode-itrunc-Linux-i13900K.ipynb  encode-itrunc-MacOS-M1.ipynb  encode-itrunc.ipynb  encode-sparse-MacOS-Intel.ipynb  fill_special.py  get_slice.py  io.py  itrunc-transpose-MacOS-x86.ipynb  large-dict-store.py  large-embed-store.py  large-tree-store.py  large-tree.py  lazyarray-expr-small-dask.ipynb  mmap_store_read.py  pack_compress.py  pack_compress2.py  pack_large.py  pack_tensor.py  pack_unpack_deep.py  set_slice.py  stringops_bench.py  sum_postfilter.py  tree-store.py
bench/b2nd/: jit-dsl.py
bench/chicago-taxi/: README.md  compare-query-methods.ipynb  compare-query-methods.py  select-arrow-flat.py  select-blosc2.py  select-duckdb-flat.py  select-pandas-flat.py  select-polars-flat.py
bench/ctable/: Prueba_iter.py  bench_append_regression.py  bench_groupby_keys.py  bench_nested_filter_index.py  bench_nested_parquet_roundtrip.py  bench_pandas_roundtrip.py  bench_persistency.py  bench_string_kinds.py  bench_validation.py  compact.py  ctable_v_panda.py  ctable_v_pandas.py  delete.py  expected_size.py  extend.py  extend_vs_apend.py  extend_vs_append.py  graph_bench.py  (+23 more)
blosc2/: CMakeLists.txt  SChunk.py  __init__.py  blosc2_ext.pyx  c2array.py  core.py  helpers.py  info.py  lazy_expr.py  lazyexpr.py  ndarray.py  proxy.py  proxyschunk.py  schunk.py  utils.py
doc/: conf.py  index.rst  python-blosc2.rst
examples/: Final_my_numba_example.ipynb  b2tree-simple.py  batch_array.py  batch_store.py  blosc2_hdf5_compression.py  btune.py  c2array-get-slice.py  compress2_decompress2.py  compress_decompress.py  dict-store.py  embed-store.py  embeded-expr-udf-b2z.py  filler.py  gil.py  mmap-rw.py  mmap.py  my_numba.py  my_numba_example.ipynb  objectarray.py  pack_array.py  pack_array2.py  pack_tensor.py  pandas_engine.py  postfilter1.py  postfilter2.py  postfilter3.py  postfilters.ipynb  prefilter.py  prefilters.ipynb  ref-object.py  save_array.py  save_tensor.py  schunk.py  schunk_roundtrip.py  slicing_and_beyond.ipynb  transpose-int_trunc.py  tree-store-blog.py  tree-store.py  tutorial-basics.ipynb  ucodecs-ufilters.ipynb  (+5 more)
off/: parquet-to-b2z.py  parquet-to-blosc2.py
plans/: b2view.md  changing-default-open-mode.md  computed-column-copilot.md  containers-tutorial.md  containters-tutorial.md  ctable-dictionary-type.md  ctable-direct-expr-indexing.md  ctable-getitem-row.md  ctable-groupby.md  ctable-implementation-log.md  ctable-indexes-opsi.md  ctable-indexing.md  ctable-ndarray-cols-copilot-sonnet.md  ctable-ndarray-cols.md  ctable-nested-fields.md  ctable-nulls.md  ctable-object-array.md  ctable-parquet-metadata.md  ctable-persistency.md  ctable-schema.md  ctable-separate-nested-cols.md  ctable-user-guide.md  ctable-varlen-cols.md  dsl-js-coverage.md  dsl-js.md  enhancing-ctable-phase2.md  enhancing-ctable-phase3.md  enhancing-ctable.md  external-js-glue-blosc2-todo.md  external-js-glue.md  maskout-cbuffer.md  materialized-computed-column.md  new-ctable-views.md  phase0-t1-dsl-syntax-inventory.md  requests-to-httpx.md  tree_store_ctable_ndarray.md  treestore-ctable-extension.md  utf8-reads-filter-optim.md  utf8-write-ingest-optim.md  wasm32-todo.md
scripts/: install-codex-skill-wasm32.sh
tests/: array-api-xfails.txt  conftest.py  test_array.py  test_b2embed.py  test_b2objects.py  test_b2tree.py  test_b2view_model.py  test_b2zip.py  test_batch_array.py  test_batch_store.py  test_bytes_array.py  test_comp_info.py  test_compress2.py  test_compression_parameters.py  test_compressors.py  test_context.py  test_cpu_info_cache.py  test_ctable_cframe.py  test_decompress.py  test_dict_store.py  test_embed_store.py  test_filters.py  test_group_reduce.py  test_iterchunks.py  test_list_array.py  test_locking.py  test_mmap.py  test_numexpr_threads.py  test_object_array.py  test_object_store.py  test_objectarray.py  test_open.py  test_open_c2array.py  test_pandas_udf_engine.py  test_pathlib.py  test_postfilters.py  test_prefilters.py  test_proxy_schunk.py  test_python_blosc.py  test_random.py  (+23 more)
todo/: b2view.md  locking-mwmr.md  schunk-refresh.md
wheels/: blosc2-3.12.0-cp312-cp312-pyodide_2024_0_wasm32.whl  blosc2-3.12.0-cp313-cp313-pyodide_2025_0_wasm32.whl  blosc2-3.12.1-cp312-cp312-pyodide_2024_0_wasm32.whl  blosc2-3.12.1-cp313-cp313-pyodide_2025_0_wasm32.whl  blosc2-3.12.2-cp312-cp312-pyodide_2024_0_wasm32.whl  blosc2-3.12.2-cp313-cp313-pyodide_2025_0_wasm32.whl  blosc2-4.0.0-cp312-cp312-pyodide_2024_0_wasm32.whl  blosc2-4.0.0-cp313-cp313-pyodide_2025_0_wasm32.whl  blosc2-4.0.0b1-cp312-cp312-pyodide_2024_0_wasm32.whl  blosc2-4.0.0b1-cp313-cp313-pyodide_2025_0_wasm32.whl  blosc2-4.1.0-cp313-cp313-pyodide_2025_0_wasm32.whl  blosc2-4.1.2-cp313-cp313-pyodide_2025_0_wasm32.whl  blosc2-4.3.1-cp313-cp313-pyodide_2025_0_wasm32.whl  blosc2-4.4.5-cp313-cp313-pyemscripten_2025_0_wasm32.whl  blosc2-4.7.0-cp313-cp313-pyemscripten_2025_0_wasm32.whl  blosc2-4.9.1-cp313-cp313-pyemscripten_2025_0_wasm32.whl  latest.txt
(+595 files in other folders)
