[build-system]
requires = [
    "scikit-build-core>=0.11.0",
    "cython>=3",
    "numpy>=2.1",
]
build-backend = "scikit_build_core.build"

[project]
name = "blosc2"
description = "A fast & compressed ndarray library with a flexible compute engine."
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [{name = "Blosc Development Team", email = "blosc@blosc.org"}]
maintainers = [{ name = "Blosc Development Team", email = "blosc@blosc.org"}]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
# Follow guidelines from https://scientific-python.org/specs/spec-0000/
dependencies = [
    "numpy>=1.26",
    "ndindex",
    "msgpack",
    "numexpr>=2.14.1; platform_machine != 'wasm32'",
    "pydantic",
    "httpx[http2]",
    "rich",
    "threadpoolctl; platform_machine != 'wasm32'",
]
version = "4.8.2.dev0"
[project.entry-points."array_api"]
blosc2 = "blosc2"

[project.urls]
homepage = "https://github.com/Blosc/python-blosc2"
documentation = "https://www.blosc.org/python-blosc2/python-blosc2.html"

[project.optional-dependencies]
parquet = ["pyarrow"]
# The b2view terminal viewer (the `b2view` script) is opt-in: most users want
# blosc2 only as a compression library, and the TUI stack has no use under
# wasm32 (no TTY).  Install with `pip install "blosc2[tui]"`.  This also pulls
# textual-plotext for the in-terminal braille plot (the 'p' key).
tui = ["textual", "textual-plotext"]
# Adds the high-res 'h' view on top of [tui], rendering a real matplotlib image
# (kitty/iTerm2/sixel, or half-cells elsewhere) — matplotlib is the heavy part.
hires = ["blosc2[tui]", "textual-image", "matplotlib"]

[project.scripts]
parquet-to-blosc2 = "blosc2.cli.parquet_to_blosc2:main"
b2view = "blosc2.b2view.cli:main"

[dependency-groups]
dev = [
    "dask",
    "h5py",
    "hdf5plugin",
    "jupyterlab",
    "matplotlib",
    "pandas",
    "plotly",
    "pre-commit",
    "pyarrow",
    "ruff",
    "s3fs",
    "xarray",
    "zarr",
]
test = [
    "pytest",
    # for the b2view Pilot tests (run with `-m tui`; textual is otherwise opt-in)
    "pytest-asyncio",
    "textual; platform_machine != 'wasm32'",
    "textual-plotext; platform_machine != 'wasm32'",
    "psutil; platform_machine != 'wasm32'",
    # torch is optional because it is quite large (but will still be used if found)
    # "torch; platform_machine != 'wasm32'",
]
doc = [
    "sphinx>=8",
    "pydata-sphinx-theme",
    "numpydoc",
    "myst-parser",
    "sphinx-paramlinks",
    "sphinx-reredirects",
    "nbsphinx",
    "ipykernel",
    "sphinx-design",
    "furo",
    "numba",
]

[tool.cibuildwheel]
build-verbosity = 1
# Skip unsupported python versions as well as 32-bit platforms, which are not supported anymore.
skip = "*-manylinux_i686 cp*-win32 *_ppc64le *_s390x *musllinux*"
test-requires = "pytest"
#test-command = "pytest {project}/tests"  # default command
# Use a simpler command here, and let the workflow .yml file to set the command
test-command = "python -c \"import blosc2; blosc2.print_versions()\""
# Manylinux 2014 will be the default for x86_64 and aarch64
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.scikit-build.sdist]
exclude = ["bench*", ".github*"]

[tool.ruff]
line-length = 109
extend-exclude = ["bench"]

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "C90",
    "I",
    "NPY",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "TC",
    "UP",
    "C901"]  # enable complexity rule
ignore = [
    "B028",
    "PT011",
    "RET505",
    "RET508",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF005",
    "RUF015",
    "RUF059",
    "SIM108",
    "SIM117",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["F841", "C901"]

[tool.ruff.lint.mccabe]
# Raise complexity from the default 10 to 14
max-complexity = 14
